Add images to Adroind Dice Roller app

--- a/Unit-1-Kotlin-basics/Pathway-4/DiceRollerApp/app/src/main/res/layout/activity_main.xml
+++ b/Unit-1-Kotlin-basics/Pathway-4/DiceRollerApp/app/src/main/res/layout/activity_main.xml
@@ -6,25 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView_result"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="36sp"
+    <ImageView
+        android:id="@+id/imageView_dice"
+        android:layout_width="160dp"
+        android:layout_height="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="1" />
+        tools:ignore="ImageContrastCheck"
+        tools:srcCompat="@tools:sample/avatars" />
 
     <Button
         android:id="@+id/btn_roll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:onClick="btn_roll_onClick"
         android:text="@string/roll"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_result" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView_dice" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
