--- a/Unit-1-Kotlin-basics/Pathway-4/DiceRollerApp/app/src/main/res/layout/activity_main.xml
+++ b/Unit-1-Kotlin-basics/Pathway-4/DiceRollerApp/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/dice_1"
         tools:ignore="ImageContrastCheck"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@drawable/dice_1" />
 
     <Button
         android:id="@+id/btn_roll"
